--- a/timesketch/frontend-v3/index.html
+++ b/timesketch/frontend-v3/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Vuetify 3</title>
+  <title>timesketch</title>
 </head>
 
 <body>
