--- a/timesketch/frontend-ng/public/index.html
+++ b/timesketch/frontend-ng/public/index.html
@@ -1,30 +1,149 @@
-<!--
-Copyright 2019 Google Inc. All rights reserved.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta name="csrf-token" content="{{ csrf_token() }}" />
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet" />
-    <title>Timesketch</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta name="csrf-token" content="{{ csrf_token() }}" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" href="/dist/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet" />
+  <title>Timesketch</title>
+  <script defer="defer" src="/dist/js/chunk-vendors.fe23d740.js" type="module"></script>
+  <script defer="defer" src="/dist/js/index.8d9c17e3.js" type="module"></script>
+  <link href="/dist/css/chunk-vendors.4937d5b5.css" rel="stylesheet">
+  <link href="/dist/css/index.24a4c64e.css" rel="stylesheet">
+  <script defer="defer" src="/dist/js/chunk-vendors-legacy.e1836b7a.js" nomodule></script>
+  <script defer="defer" src="/dist/js/index-legacy.ecba7630.js" nomodule></script>
+</head>
+
+<body>
+  <!-- START MIGRATION BANNER HOTPATCH -->
+  <style>
+    #ts-migration-banner {
+      background-color: #b71c1c; /* Dark Red */
+      color: white;
+      text-align: center;
+      padding: 24px; /* Increased size */
+      font-family: "Roboto", sans-serif;
+      font-size: 18px; /* Larger font */
+      line-height: 1.6;
+      position: relative;
+      z-index: 99999;
+      display: none; /* Hidden by default */
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+      border-bottom: 2px solid rgba(0,0,0,0.2);
+    }
+
+    /* Layout for the text content */
+    .ts-banner-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    /* The actual URL link */
+    #ts-migration-banner a.ts-new-link {
+      color: #fff;
+      font-weight: 900;
+      font-size: 20px;
+      text-decoration: none;
+      background-color: rgba(0,0,0,0.3);
+      padding: 8px 16px;
+      border-radius: 6px;
+      border: 1px solid rgba(255,255,255,0.4);
+      transition: background-color 0.2s;
+      display: inline-block;
+      margin-top: 5px;
+    }
+    #ts-migration-banner a.ts-new-link:hover {
+      background-color: rgba(0,0,0,0.5);
+      text-decoration: underline;
+    }
+
+    /* The X close button (Temporary) */
+    #ts-migration-banner .ts-banner-close-temp {
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      cursor: pointer;
+      font-weight: bold;
+      opacity: 0.7;
+      font-size: 28px;
+      line-height: 1;
+      padding: 5px;
+    }
+    #ts-migration-banner .ts-banner-close-temp:hover {
+      opacity: 1;
+    }
+
+    /* The 'Don't show again' button (Permanent) */
+    #ts-migration-banner .ts-dismiss-permanent {
+      font-size: 12px;
+      color: rgba(255,255,255,0.9);
+      cursor: pointer;
+      background-color: transparent;
+      padding: 6px 12px;
+      border-radius: 20px;
+      font-weight: 500;
+      letter-spacing: 0.5px;
+      transition: all 0.2s;
+    }
+    #ts-migration-banner .ts-dismiss-permanent:hover {
+      background-color: rgba(255,255,255,0.15);
+      border-color: #fff;
+      color: #fff;
+    }
+  </style>
+
+  <div id="ts-migration-banner">
+    <div class="ts-banner-content">
+      <span>
+        <strong>⚠️ NOTICE:</strong> We are moving! Access the new Timesketch instance here:
+        <br/>
+        <a href="https://timesketch.corp.goog/" class="ts-new-link">https://timesketch.corp.goog/</a>
+        <br/>
+        No access? Open a bug => <a href="http://go/timesketch-bug" style="color:#fff">go/timesketch-bug</a>
+        <br/>
+        ! Use the old instance only for existing cases pre 2026-01-20 !
+      </span>
+
+      <!-- Permanent Dismiss Button -->
+      <button class="ts-dismiss-permanent" onclick="dismissTsBannerPermanently()">
+        I know, don't show this again.
+      </button>
+    </div>
+
+    <!-- Temporary Close Button (X) -->
+    <span class="ts-banner-close-temp" onclick="dismissTsBannerTemp()" title="Close (will reappear on reload)">✕</span>
+  </div>
+
+  <script>
+    (function() {
+      // Check localStorage immediately to decide if we show the banner
+      var banner = document.getElementById('ts-migration-banner');
+      if (localStorage.getItem('tsMigrationBannerDismissed') !== 'true') {
+        banner.style.display = 'block';
+      }
+    })();
+
+    // Function for 'X': Hides banner for now, but DOES NOT save preference
+    window.dismissTsBannerTemp = function() {
+      var banner = document.getElementById('ts-migration-banner');
+      banner.style.display = 'none';
+    };
+
+    // Function for 'Don't show again': Hides banner AND saves preference
+    window.dismissTsBannerPermanently = function() {
+      var banner = document.getElementById('ts-migration-banner');
+      banner.style.display = 'none';
+      localStorage.setItem('tsMigrationBannerDismissed', 'true');
+    };
+  </script>
+  <!-- END MIGRATION BANNER HOTPATCH -->
+
+  <div id="app"></div>
+</body>
 </html>
