--- a/timesketch/frontend-ng/public/index.html
+++ b/timesketch/frontend-ng/public/index.html
@@ -15,7 +15,6 @@ limitations under the License.
 -->
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta name="csrf-token" content="{{ csrf_token() }}" />
     <meta charset="utf-8" />
@@ -28,3 +27,4 @@ limitations under the License.
   <body>
     <div id="app"></div>
   </body>
+</html>
